# shelly-influx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/actions/install-env/: action.yml
.github/workflows/: build-image.yml  code-quality.yaml
config/: example_config.yaml
docker/: Dockerfile  requirements.txt
src/: __init__.py  config.py  influx.py  run.py  shelly.py  timer.py  version.py
